# si470x_rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: simple.rs  simple_async.rs
examples/esp32/: Cargo.toml  Makefile
scripts/: check.sh
src/: driver.rs  driver_async.rs  driver_blocking.rs  driver_common.rs  lib.rs  registers.rs
