[package]
name = "si470x"
version = "0.1.0"
edition = "2024"
authors = ["Chris Mumford <cmumford@cmumford.com>"]
description = "Pure Rust Si470x FM radio driver (blocking + async support)"
readme = "README.md"
keywords = ["radio", "fm", "driver", "si4702", "si4703"]

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async = { version = "0.2", default-features = false }
modular-bitfield-msb = "0.11.2"

[dev-dependencies]
cfg-if = "1.0"
embassy-executor = { version = "0.10.0" }
embassy-time = { version = "0.5.1", features = ["generic-queue-8"] }
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = "0.5.0"
esp-hal = { version = "1.1.0", features = [
    "exception-handler",
    "log-04",
    "unstable",
] }
esp-println = { version = "0.17.0", features = ["log-04"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "log-04"] }
log = "0.4"

[features]
default = []
sync = ["maybe-async/is_sync"]
async = ["dep:embedded-hal-async"]

esp32 = [
    "esp-backtrace/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-hal/esp32",
    "esp-println/esp32",
    "esp-rtos/esp32",
]

esp32c3 = [
    "esp-backtrace/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-hal/esp32c3",
    "esp-println/esp32c3",
    "esp-rtos/esp32c3",
]

esp32c6 = [
    "esp-backtrace/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-hal/esp32c6",
    "esp-println/esp32c6",
    "esp-rtos/esp32c6",
]

esp32h2 = [
    "esp-backtrace/esp32h2",
    "esp-bootloader-esp-idf/esp32h2",
    "esp-hal/esp32h2",
    "esp-println/esp32h2",
    "esp-rtos/esp32h2",
]

esp32s2 = [
    "esp-backtrace/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
    "esp-hal/esp32s2",
    "esp-println/esp32s2",
    "esp-rtos/esp32s2",
]

esp32s3 = [
    "esp-backtrace/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-hal/esp32s3",
    "esp-println/esp32s3",
    "esp-rtos/esp32s3",
]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["sync"]

[[example]]
name = "simple_async"
path = "examples/simple_async.rs"
required-features = ["async"]
