[package]
name = "si470x"
version = "1.0.0"
edition = "2024"
authors = ["Chris Mumford <cmumford@cmumford.com>"]
description = "Pure Rust Si470x FM radio driver (blocking + async support)"
readme = "README.md"
keywords = ["radio", "fm", "driver", "si4702", "si4703"]
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT"
homepage = "https://github.com/cmumford/si470x"
repository = "https://github.com/cmumford/si470x"

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async = { version = "0.2", default-features = false }
modular-bitfield-msb = "0.11.2"

[features]
sync = ["maybe-async/is_sync"]
async = ["dep:embedded-hal-async"]
test = ["sync"]
