[package]
name = "si470x-esp32-examples"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false

[dependencies]
cfg-if = "1.0"
embassy-executor = { version = "0.10.0" }
embassy-time = { version = "0.5.1", features = ["generic-queue-8"] }
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = "0.5.0"
esp-hal = { version = "1.1.0", features = [
    "exception-handler",
    "log-04",
    "unstable",
] }
esp-println = { version = "0.17.0", features = ["log-04"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "log-04"] }
log = "0.4"
si470x = { path = "../.." }

[features]
sync = ["si470x/sync"]
async = ["si470x/async"]

esp32 = [
    "esp-backtrace/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-hal/esp32",
    "esp-println/esp32",
    "esp-rtos/esp32",
]

esp32c3 = [
    "esp-backtrace/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-hal/esp32c3",
    "esp-println/esp32c3",
    "esp-rtos/esp32c3",
]

esp32c6 = [
    "esp-backtrace/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-hal/esp32c6",
    "esp-println/esp32c6",
    "esp-rtos/esp32c6",
]

esp32h2 = [
    "esp-backtrace/esp32h2",
    "esp-bootloader-esp-idf/esp32h2",
    "esp-hal/esp32h2",
    "esp-println/esp32h2",
    "esp-rtos/esp32h2",
]

esp32s2 = [
    "esp-backtrace/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
    "esp-hal/esp32s2",
    "esp-println/esp32s2",
    "esp-rtos/esp32s2",
]

esp32s3 = [
    "esp-backtrace/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-hal/esp32s3",
    "esp-println/esp32s3",
    "esp-rtos/esp32s3",
]

[[example]]
name = "simple"
path = "src/bin/simple.rs"

[[example]]
name = "simple_async"
path = "src/bin/simple_async.rs"
